--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1.2"
-celery = "^5.4.0"
+celery = {extras = ["redis"], version = "^5.4.0"}
 django-rest-framework = "^0.1.0"
 django-celery-beat = "^2.7.0"
 psycopg2-binary = "^2.9.10"
