--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-extensions = "^3.2.3"
 drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}
 djangorestframework-simplejwt = "^5.3.1"
 python-dotenv = "^1.0.1"
+python-decouple = "^3.8"
 
 
 [build-system]
