--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ drf-spectacular = {extras = ["sidecar"], version = "^0.27.2"}
 djangorestframework-simplejwt = "^5.3.1"
 python-dotenv = "^1.0.1"
 python-decouple = "^3.8"
+python-telegram-bot = "^21.7"
+certifi = "^2024.8.30"
+idna = "^3.10"
 
 
 [build-system]
